<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.lgsdiamond.hbmembers.ui.splash.SplashFragment"
        android:label="SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/nav_member"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_member"
        android:name="com.lgsdiamond.hbmembers.ui.member.MemberFragment"
        android:label="@string/title_member"
        tools:layout="@layout/fragment_member" />

    <fragment
        android:id="@+id/nav_company_12"
        android:name="com.lgsdiamond.hbmembers.ui.single.Company12Fragment"
        android:label="@string/title_company_12"
        tools:layout="@layout/fragment_single" />

    <fragment
        android:id="@+id/nav_company_34"
        android:name="com.lgsdiamond.hbmembers.ui.single.Company34Fragment"
        android:label="@string/title_company_34"
        tools:layout="@layout/fragment_single" />

    <fragment
        android:id="@+id/nav_school"
        android:name="com.lgsdiamond.hbmembers.ui.single.SchoolFragment"
        android:label="@string/title_school"
        tools:layout="@layout/fragment_single" />

    <fragment
        android:id="@+id/nav_major"
        android:name="com.lgsdiamond.hbmembers.ui.single.MajorFragment"
        android:label="@string/title_major"
        tools:layout="@layout/fragment_single" />

    <fragment
        android:id="@+id/nav_branch"
        android:name="com.lgsdiamond.hbmembers.ui.single.BranchFragment"
        android:label="@string/title_branch"
        tools:layout="@layout/fragment_single" />

    <fragment
        android:id="@+id/nav_board"
        android:name="com.lgsdiamond.hbmembers.ui.pdf.BoardFragment"
        android:label="@string/title_board"
        tools:layout="@layout/fragment_pdf" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.lgsdiamond.hbmembers.ui.pdf.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_pdf" />

    <fragment
        android:id="@+id/nav_message"
        android:name="com.lgsdiamond.hbmembers.ui.message.MessageFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_message" />

    <fragment
        android:id="@+id/action_login"
        android:name="com.lgsdiamond.hbmembers.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />

</navigation>
